# komventory

./: .env.example  .gitignore  README.md  ROADMAP.md  compose.override.yml.example  compose.yml  pyproject.toml
docker/: Caddyfile  Dockerfile  gitconfig
docs/: notes.txt
frontend/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
scripts/: komv-test.fish  warm-whisper-cache.fish
src/komventory/: __init__.py  api.py  cleanup.py  cli.py  config.py  frames.py  import_gdoc.py  ingest.py  lang.py  lock.py  log_io.py  model_convert.py  qa.py  render_html.py  state.py  sync.py  timestamps.py  transcribe.py  tts.py  watch.py  whisper_cleanup.py
