[project]
name = "komventory"
version = "0.1.0"
description = "Personal/community inventory: append-only timestamped event log fed by Whisper transcription of phone audio/video."
authors = [
    { name = "Jindrich Kolman", email = "kolman.jindrich@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "watchdog>=4.0",
    "faster-whisper>=1.0",
    "rich>=13.7",
    "markdown>=3.6",
]

[project.optional-dependencies]
# Host-only extras for one-time CT2 conversion of HF community Whisper finetunes
# (e.g. Czech-tuned models). Not installed in the Docker image to keep it slim;
# enable on the host with `uv sync --extra convert`.
convert = [
    "transformers>=4.44",
    "torch>=2.1",
]

[project.scripts]
komventory = "komventory.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
